fix image jump

--- a/static/style.css
+++ b/static/style.css
@@ -247,7 +247,7 @@ input:disabled, select:disabled {
 
 /* --- Cover Art Aspect Ratio Control --- */
 .book-cover-wrapper {
-    max-width: 500px;
+    max-width: 450px;
     margin: 0 auto;
     line-height: 0;
     /* background-color: #212529; */
@@ -255,7 +255,7 @@ input:disabled, select:disabled {
 }
 
 .book-cover-img {
-    width: auto;
+    width: 100%;
     height: auto;
     max-width: 100%;
     max-height: 70vh;
